swager + поиск по лемме + тест
