# docs/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
               items:
                 properties:
                   V:
-                    example: значение
+                    example: вариации значений из L
                     type: string
                 type: object
               type: array
@@ -26,7 +26,7 @@ definitions:
             items:
               properties:
                 V:
-                  example: значение
+                  example: падеж-число и прочее
                   type: string
               type: object
             type: array
@@ -54,11 +54,41 @@ definitions:
 info:
   contact: {}
 paths:
-  /lemma:
+  /list:
     get:
-      consumes:
-      - application/json
-      description: Метод для вывода списка лемм
+      description: Метод для вывода списка лемм. http://opencorpora.org/dict.php?act=gram
+      parameters:
+      - description: Слово по которому будет поиск
+        example: муха
+        in: query
+        name: T
+        required: true
+        type: string
+      - description: Часть речи
+        in: query
+        items:
+          enum:
+          - Name
+          - NOUN
+          - ADJF
+          - ADJS
+          - COMP
+          - VERB
+          - INFN
+          - PRTF
+          - PRTS
+          - GRND
+          - NUMR
+          - ADVB
+          - NPRO
+          - PRED
+          - PREP
+          - CONJ
+          - PRCL
+          - INTJ
+          type: string
+        name: V
+        type: array
       produces:
       - application/json
       responses:
@@ -68,7 +98,7 @@ paths:
             $ref: '#/definitions/lemma.ListResponse'
       summary: Вывод списка лемм по запросу
       tags:
-      - example
+      - list
   /ping:
     get:
       consumes:
@@ -83,5 +113,5 @@ paths:
             $ref: '#/definitions/ping.Response'
       summary: ping example
       tags:
-      - example
+      - ping
 swagger: "2.0"
